feat: django project structure

--- a/00_step_bystep/01_Hello_Django.ipynb
+++ b/00_step_bystep/01_Hello_Django.ipynb
@@ -41,6 +41,23 @@
    "cell_type": "markdown",
    "id": "beb321c3-e63c-40a2-b8f5-6748b6c602fa",
    "metadata": {},
+   "source": [
+    "Start project:<br>\n",
+    "```bash\n",
+    "django-admin startproject project .\n",
+    "```\n",
+    "Start server<br>\n",
+    "```bash\n",
+    "python manage.py runserver\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99b7caaa-6583-4ac5-8d14-66b90df4d8a4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
